--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
       # maven build
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
-        working-directory: ./java_test3
+        working-directory: ./test
       # Test実行
       - name: Test with Maven
         run: mvn --batch-mode test
-        working-directory: ./java_test3
+        working-directory: ./test
